@@ -216,10 +216,10 @@ TagInfo TagMAP[MAX_HTMLTAG] = {
     {"noframes", ALST_NOFRAMES, MAXA_NOFRAMES, 0},	/*  98 HTML_NOFRAMES   */
     {"/noframes", NULL, 0, TFLG_END},	/*  99 HTML_N_NOFRAMES */
 
-    {"sup", NULL, 0, 0},		/* 100 HTML_SUP       */
-    {"/sup", NULL, 0, 0},		/* 101 HTML_N_SUP       */
-    {"sub", NULL, 0, 0},		/* 102 HTML_SUB       */
-    {"/sub", NULL, 0, 0},		/* 103 HTML_N_SUB       */
+    {"sup", NULL, 0, 0},	/* 100 HTML_SUP       */
+    {"/sup", NULL, 0, 0},	/* 101 HTML_N_SUP       */
+    {"sub", NULL, 0, 0},	/* 102 HTML_SUB       */
+    {"/sub", NULL, 0, 0},	/* 103 HTML_N_SUB       */
     {NULL, NULL, 0, 0},		/* 104 Undefined       */
     {NULL, NULL, 0, 0},		/* 105 Undefined       */
 
