@@ -126,7 +126,8 @@ parse_tag(char **s, int internal)
 	*(p++) = *(q++);
 	SKIP_BLANKS(q);
     }
-    while (*q && !IS_SPACE(*q) && *q != '>' && p - tagname < MAX_TAG_LEN - 1) {
+    while (*q && !IS_SPACE(*q) && !(tagname[0] != '/' && *q == '/') &&
+	   *q != '>' && p - tagname < MAX_TAG_LEN - 1) {
 	*(p++) = tolower(*(q++));
     }
     *p = '\0';
